# freestanding-c-kit

./: .gitignore  ADDITIONAL_TERMS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/fckit/: arena.h  fckit.h  format.h  numeric.h  string.h
src/: arena.c  format.c  numeric.c  string.c
tests/: test_fckit.c
